# libpdm

./: CMakeLists.txt  Kbuild  Makefile
app/pdm_test/: CMakeLists.txt
app/pdm_test/src/: pdm_test.c
app/websocket_server/: websocket_server.c  ws_server.c
app/ws_server/: CMakeLists.txt  ws_server.c
driver/: Kbuild
lib/: CMakeLists.txt
src/: test.c
web/: CMakeLists.txt
web/install/etc/websocket/: mqtt_conf.json
web/install/var/www/html/: index.html
web/install/var/www/html/css/: styles.css
web/install/var/www/html/js/: IndexMain.js  Logger.js  WebSocketClient.js  main.js  utils.js
web/var/www/: index.html
web/var/www/html/: index.html
web/var/www/html/js/: utils.js  ws_manager.js
web/var/www/javascript/: mqtt-handler.js  ws-handler.js
